--- a/fastfetch/config.conf
+++ b/fastfetch/config.conf
@@ -26,7 +26,7 @@
 # List available modules with "fastfetch --list-modules".
 # Get the default structure with "fastfetch --print-structure".
 # --structure Title:Separator:OS:Host:Kernel:Uptime:Packages:Shell:Resolution:DE:WM:WMTheme:Theme:Icons:Font:Cursor:Terminal:TerminalFont:CPU:GPU:Memory:Disk:Battery:Locale:Break:Colors
---structure Title:Separator:OS:Host:Kernel:Uptime:Packages:Resolution:DE:WM:WMTheme:Theme:Icons:CPU:GPU:Memory:Disk:Battery:Player:Song:Break
+--structure Title:Separator:OS:Host:Kernel:Uptime:Packages:Resolution:DE:WM:WMTheme:Theme:Icons:CPU:GPU:Memory:Disk:Battery:Song:Break
 
 # Multithreading option:
 # Sets if fastfetch should use multiple threads to detect the values.
