--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -436,7 +436,8 @@ opacity-rule = [
 	"95:class_g = 'code'",
 	"95:class_g = 'code-oss'",
   "95:class_g = 'vscodium'",
-  "95:class_g = 'VSCodium'"
+  "95:class_g = 'VSCodium'",
+  "90:name = 'Spotify'"
 ]
 
 
