--- a/.config/VSCodium/User/settings.json
+++ b/.config/VSCodium/User/settings.json
@@ -29,12 +29,15 @@
 	"terminal.integrated.fontFamily": "JetBrainsMono NF",
 	"terminal.integrated.defaultProfile.linux": "zsh",
 	"cSpell.userWords": [
+		"alacritty",
 		"blit",
 		"Cagulis",
 		"Cena",
 		"cenu",
+		"cirala",
 		"dirnx",
 		"dirny",
+		"dotfiles",
 		"grafiki",
 		"Istabu",
 		"Izvietošanas",
@@ -42,10 +45,14 @@
 		"Kristiāns",
 		"Kristofers",
 		"Kvadratūra",
+		"lfimg",
+		"nsxiv",
+		"nvim",
 		"pathlib",
 		"pygame",
 		"roboto",
 		"Sērija",
+		"Solorice",
 		"Stāvs",
 		"xlabel",
 		"xticks",
@@ -56,7 +63,10 @@
 		"suppressLineUncommittedWarning": true
 	},
 	"vsicons.dontShowNewVersionMessage": true,
-	"indentRainbow.excludedLanguages": ["plaintext", "django-txt"],
+	"indentRainbow.excludedLanguages": [
+		"plaintext",
+		"django-txt"
+	],
 	"[markdown]": {
 		"editor.defaultFormatter": "yzhang.markdown-all-in-one"
 	},
@@ -109,5 +119,6 @@
 		]
 	},
 	"workbench.colorTheme": "Dracula Soft",
-	"workbench.iconTheme": "material-icon-theme"
+	"workbench.iconTheme": "material-icon-theme",
+	"Lua.telemetry.enable": true
 }
