--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -39,8 +39,6 @@ window:
     columns: 0
     lines: 0
 
-
-
   opacity: 0.9
   # Window position (changes require restart)
   #
@@ -72,9 +70,6 @@ window:
   #     - buttonless: Title bar, transparent background and no title bar buttons
   decorations: none
 
-
-
-
   # Startup Mode (changes require restart)
   #
   # Values for `startup_mode`:
@@ -94,10 +89,10 @@ window:
 
   # Window class (Linux/BSD only):
   # class:
-    # Application instance name
-    # instance: Alacritty
-    # General application class
-    # general: Alacritty
+  # Application instance name
+  # instance: Alacritty
+  # General application class
+  # general: Alacritty
 
   # GTK theme variant (Linux/BSD only)
   #
@@ -191,8 +186,8 @@ draw_bold_text_with_bright_colors: true
 colors:
   # Default colors
   primary:
-    background: '#1d1f21'
-    foreground: '#c5c8c6'
+    background: "#1d1f21"
+    foreground: "#c5c8c6"
 
     # Bright and dim foreground colors
     #
@@ -200,8 +195,8 @@ colors:
     # present. If the bright foreground color is not set, or
     # `draw_bold_text_with_bright_colors` is `false`, the normal foreground
     # color will be used.
-    dim_foreground: '#828482'
-    bright_foreground: '#eaeaea'
+    dim_foreground: "#828482"
+    bright_foreground: "#eaeaea"
 
   # Cursor colors
   #
@@ -237,8 +232,8 @@ colors:
     #     background: '#000000'
 
     bar:
-        background: '#282828'
-        foreground: '#EBEBE9'
+      background: "#282828"
+      foreground: "#EBEBE9"
 
   # Keyboard regex hints
   hints:
@@ -247,16 +242,16 @@ colors:
     # Allowed values are CellForeground/CellBackground, which reference the
     # affected cell, or hexadecimal colors like #ff00ff.
     start:
-        foreground: '#1d1f21'
-        background: '#e9ff5e'
+      foreground: "#1d1f21"
+      background: "#e9ff5e"
 
     # All characters after the first one in the hint label
     #
     # Allowed values are CellForeground/CellBackground, which reference the
     # affected cell, or hexadecimal colors like #ff00ff.
     end:
-        foreground: '#e9ff5e'
-        background: '#1d1f21'
+      foreground: "#e9ff5e"
+      background: "#1d1f21"
 
   # Line indicator
   #
@@ -280,39 +275,39 @@ colors:
 
   # Normal colors
   normal:
-      black:   '#313539'
-      red:     '#b02626'
-      green:   '#40a62f'
-      yellow:  '#f1e635'
-      blue:    '#314ad0'
-      magenta: '#b30ad0'
-      cyan:    '#32d0fc'
-      white:   '#acadb1'
+    black: "#313539"
+    red: "#b02626"
+    green: "#40a62f"
+    yellow: "#f1e635"
+    blue: "#314ad0"
+    magenta: "#b30ad0"
+    cyan: "#32d0fc"
+    white: "#acadb1"
 
   # Bright colors
   bright:
-      black:   '#717174'
-      red:     '#b02626'
-      green:   '#40a62f'
-      yellow:  '#f1e635'
-      blue:    '#314ad0'
-      magenta: '#b30ad0'
-      cyan:    '#32d0fc'
-      white:   '#acadb1'
+    black: "#717174"
+    red: "#b02626"
+    green: "#40a62f"
+    yellow: "#f1e635"
+    blue: "#314ad0"
+    magenta: "#b30ad0"
+    cyan: "#32d0fc"
+    white: "#acadb1"
 
   # Dim colors
   #
   # If the dim colors are not set, they will be calculated automatically based
   # on the `normal` colors.
   dim:
-      black:   '#676f78'
-      red:     '#b55454'
-      green:   '#78a670'
-      yellow:  '#faf380'
-      blue:    '#707fd0'
-      magenta: '#c583d0'
-      cyan:    '#8adaf1'
-      white:   '#e0e3e7'
+    black: "#676f78"
+    red: "#b55454"
+    green: "#78a670"
+    yellow: "#faf380"
+    blue: "#707fd0"
+    magenta: "#c583d0"
+    cyan: "#8adaf1"
+    white: "#e0e3e7"
 
   # Indexed Colors
   #
@@ -335,44 +330,42 @@ colors:
 #
 # The bell is rung every time the BEL control character is received.
 #bell:
-  # Visual Bell Animation
-  #
-  # Animation effect for flashing the screen when the visual bell is rung.
-  #
-  # Values for `animation`:
-  #   - Ease
-  #   - EaseOut
-  #   - EaseOutSine
-  #   - EaseOutQuad
-  #   - EaseOutCubic
-  #   - EaseOutQuart
-  #   - EaseOutQuint
-  #   - EaseOutExpo
-  #   - EaseOutCirc
-  #   - Linear
-  #animation: EaseOutExpo
+# Visual Bell Animation
+#
+# Animation effect for flashing the screen when the visual bell is rung.
+#
+# Values for `animation`:
+#   - Ease
+#   - EaseOut
+#   - EaseOutSine
+#   - EaseOutQuad
+#   - EaseOutCubic
+#   - EaseOutQuart
+#   - EaseOutQuint
+#   - EaseOutExpo
+#   - EaseOutCirc
+#   - Linear
+#animation: EaseOutExpo
 
-  # Duration of the visual bell flash in milliseconds. A `duration` of `0` will
-  # disable the visual bell animation.
-  #duration: 0
+# Duration of the visual bell flash in milliseconds. A `duration` of `0` will
+# disable the visual bell animation.
+#duration: 0
 
-  # Visual bell animation color.
-  #color: '#ffffff'
+# Visual bell animation color.
+#color: '#ffffff'
 
-
-
-  # Bell Command
-  #
-  # This program is executed whenever the bell is rung.
-  #
-  # When set to `command: None`, no command will be executed.
-  #
-  # Example:
-  #   command:
-  #     program: notify-send
-  #     args: ["Hello, World!"]
-  #
-  #command: None
+# Bell Command
+#
+# This program is executed whenever the bell is rung.
+#
+# When set to `command: None`, no command will be executed.
+#
+# Example:
+#   command:
+#     program: notify-send
+#     args: ["Hello, World!"]
+#
+#command: None
 
 selection:
   # This string contains all characters that are used as separators for
@@ -435,7 +428,7 @@ cursor:
 #   - (Linux/BSD) user login shell
 #   - (Windows) powershell
 shell:
-    program: /bin/zsh
+  program: /bin/zsh
 #  args:
 #    - --login
 
@@ -452,60 +445,60 @@ shell:
 #ipc_socket: true
 
 #mouse:
-  # Click settings
-  #
-  # The `double_click` and `triple_click` settings control the time
-  # alacritty should wait for accepting multiple clicks as one double
-  # or triple click.
-  #double_click: { threshold: 300 }
-  #triple_click: { threshold: 300 }
+# Click settings
+#
+# The `double_click` and `triple_click` settings control the time
+# alacritty should wait for accepting multiple clicks as one double
+# or triple click.
+#double_click: { threshold: 300 }
+#triple_click: { threshold: 300 }
 
-  # If this is `true`, the cursor is temporarily hidden when typing.
-  #hide_when_typing: false
+# If this is `true`, the cursor is temporarily hidden when typing.
+#hide_when_typing: false
 
 # Regex hints
 #
 # Terminal hints can be used to find text in the visible part of the terminal
 # and pipe it to other applications.
 #hints:
-  # Keys used for the hint labels.
-  #alphabet: "jfkdls;ahgurieowpq"
+# Keys used for the hint labels.
+#alphabet: "jfkdls;ahgurieowpq"
 
-  # List with all available hints
-  #
-  # Each hint must have a `regex` and either an `action` or a `command` field.
-  # The fields `mouse`, `binding` and `post_processing` are optional.
-  #
-  # The fields `command`, `binding.key`, `binding.mods`, `binding.mode` and
-  # `mouse.mods` accept the same values as they do in the `key_bindings` section.
-  #
-  # The `mouse.enabled` field controls if the hint should be underlined while
-  # the mouse with all `mouse.mods` keys held or the vi mode cursor is above it.
-  #
-  # If the `post_processing` field is set to `true`, heuristics will be used to
-  # shorten the match if there are characters likely not to be part of the hint
-  # (e.g. a trailing `.`). This is most useful for URIs.
-  #
-  # Values for `action`:
-  #   - Copy
-  #       Copy the hint's text to the clipboard.
-  #   - Paste
-  #       Paste the hint's text to the terminal or search.
-  #   - Select
-  #       Select the hint's text.
-  #   - MoveViModeCursor
-  #       Move the vi mode cursor to the beginning of the hint.
-  #enabled:
-  # - regex: "(ipfs:|ipns:|magnet:|mailto:|gemini:|gopher:|https:|http:|news:|file:|git:|ssh:|ftp:)\
-  #           [^\u0000-\u001F\u007F-\u009F<>\"\\s{-}\\^⟨⟩`]+"
-  #   command: xdg-open
-  #   post_processing: true
-  #   mouse:
-  #     enabled: true
-  #     mods: None
-  #   binding:
-  #     key: U
-  #     mods: Control|Shift
+# List with all available hints
+#
+# Each hint must have a `regex` and either an `action` or a `command` field.
+# The fields `mouse`, `binding` and `post_processing` are optional.
+#
+# The fields `command`, `binding.key`, `binding.mods`, `binding.mode` and
+# `mouse.mods` accept the same values as they do in the `key_bindings` section.
+#
+# The `mouse.enabled` field controls if the hint should be underlined while
+# the mouse with all `mouse.mods` keys held or the vi mode cursor is above it.
+#
+# If the `post_processing` field is set to `true`, heuristics will be used to
+# shorten the match if there are characters likely not to be part of the hint
+# (e.g. a trailing `.`). This is most useful for URIs.
+#
+# Values for `action`:
+#   - Copy
+#       Copy the hint's text to the clipboard.
+#   - Paste
+#       Paste the hint's text to the terminal or search.
+#   - Select
+#       Select the hint's text.
+#   - MoveViModeCursor
+#       Move the vi mode cursor to the beginning of the hint.
+#enabled:
+# - regex: "(ipfs:|ipns:|magnet:|mailto:|gemini:|gopher:|https:|http:|news:|file:|git:|ssh:|ftp:)\
+#           [^\u0000-\u001F\u007F-\u009F<>\"\\s{-}\\^⟨⟩`]+"
+#   command: xdg-open
+#   post_processing: true
+#   mouse:
+#     enabled: true
+#     mods: None
+#   binding:
+#     key: U
+#     mods: Control|Shift
 
 # Mouse bindings
 #
@@ -536,8 +529,8 @@ shell:
 #
 # - `mods` (see key bindings)
 mouse_bindings:
-# - { mouse: Right,             action: ExpandSelection }
-- { mouse: Middle, mode: ~Vi, action: PasteSelection  }
+  # - { mouse: Right,             action: ExpandSelection }
+  - { mouse: Middle, mode: ~Vi, action: PasteSelection }
 
 # Key bindings
 #
@@ -750,17 +743,17 @@ key_bindings:
   #- { key: Copy,                                        action: Copy          }
   # - { key: L,         mods: Control,                    action: clear        }
   #- { key: L,         mods: Control, mode: ~Vi|~Search, chars: "\x0c"         }
-  - { key: Up,    mods: Shift,   mode: ~Alt,        action: ScrollPageUp   }
-  - { key: Down,  mods: Shift,   mode: ~Alt,        action: ScrollPageDown }
-  - { key: Home,      mods: Shift,   mode: ~Alt,        action: ScrollToTop    }
-  - { key: End,       mods: Shift,   mode: ~Alt,        action: ScrollToBottom }
+  - { key: Up, mods: Shift, mode: ~Alt, action: ScrollPageUp }
+  - { key: Down, mods: Shift, mode: ~Alt, action: ScrollPageDown }
+  - { key: Home, mods: Shift, mode: ~Alt, action: ScrollToTop }
+  - { key: End, mods: Shift, mode: ~Alt, action: ScrollToBottom }
   # - { key: Delete,                                      actions: Del         }
   # - { key: Key9,      mods: Control|Shift,              action: CreateNewWindow, }
 
   # Vi Mode
   # - { key: Space,  mods: Shift|Control, mode: ~Search,    action: ToggleViMode            }
   # - { key: Space,  mods: Shift|Control, mode: Vi|~Search, action: ScrollToBottom          }
-#  - { key: Escape,                         mode: ~Search,    action: ToggleViMode            }
+  #  - { key: Escape,                         mode: ~Search,    action: ToggleViMode            }
   # - { key: Escape,                      mode: Vi|~Search, action: ClearSelection          }
   # - { key: I,                           mode: Vi|~Search, action: ToggleViMode            }
   # - { key: I,                           mode: Vi|~Search, action: ScrollToBottom          }
@@ -821,21 +814,21 @@ key_bindings:
   #- { key: Return, mods: Shift,   mode: Search|~Vi, action: SearchFocusPrevious   }
 
   # (Windows, Linux, and BSD only)
-  - { key: V,              mods: Control|Shift, mode: ~Vi,        action: Paste            }
-  - { key: C,              mods: Control|Shift,                   action: Copy             }
-  - { key: F,              mods: Control|Shift, mode: ~Search,    action: SearchForward    }
-  - { key: B,              mods: Control|Shift, mode: ~Search,    action: SearchBackward   }
+  - { key: V, mods: Control|Shift, mode: ~Vi, action: Paste }
+  - { key: C, mods: Control|Shift, action: Copy }
+  - { key: F, mods: Control|Shift, mode: ~Search, action: SearchForward }
+  - { key: B, mods: Control|Shift, mode: ~Search, action: SearchBackward }
   #- { key: C,              mods: Control|Shift, mode: Vi|~Search, action: ClearSelection   }
   #- { key: Insert,         mods: Shift,                           action: PasteSelection   }
-  - { key: Key0,           mods: Control,                         action: ResetFontSize    }
-  - { key: Equals,         mods: Control,                         action: IncreaseFontSize }
+  - { key: Key0, mods: Control, action: ResetFontSize }
+  - { key: Equals, mods: Control, action: IncreaseFontSize }
   # - { key: Plus,           mods: Control,                         action: IncreaseFontSize }
-  - { key: NumpadAdd,      mods: Control,                         action: IncreaseFontSize }
-  - { key: Minus,          mods: Control,                         action: DecreaseFontSize }
-  - { key: NumpadSubtract, mods: Control,                         action: DecreaseFontSize }
-  - { key: Q,              mods: Control|Shift,                         action: Quit }
+  - { key: NumpadAdd, mods: Control, action: IncreaseFontSize }
+  - { key: Minus, mods: Control, action: DecreaseFontSize }
+  - { key: NumpadSubtract, mods: Control, action: DecreaseFontSize }
+  - { key: Q, mods: Control|Shift, action: Quit }
   # (Windows only)
-  - { key: F11,                                                   action: ToggleFullscreen }
+  - { key: F11, action: ToggleFullscreen }
 
   # (macOS only)
   #- { key: K,              mods: Command, mode: ~Vi|~Search, chars: "\x0c"                 }
@@ -858,24 +851,23 @@ key_bindings:
   #- { key: F,              mods: Command|Control,            action: ToggleFullscreen      }
   #- { key: F,              mods: Command, mode: ~Search,     action: SearchForward         }
   #- { key: B,              mods: Command, mode: ~Search,     action: SearchBackward        }
-
 #debug:
-  # Display the time it takes to redraw each frame.
-  #render_timer: false
+# Display the time it takes to redraw each frame.
+#render_timer: false
 
-  # Keep the log file after quitting Alacritty.
-  #persistent_logging: false
+# Keep the log file after quitting Alacritty.
+#persistent_logging: false
 
-  # Log level
-  #
-  # Values for `log_level`:
-  #   - Off
-  #   - Error
-  #   - Warn
-  #   - Info
-  #   - Debug
-  #   - Trace
-  #log_level: Warn
+# Log level
+#
+# Values for `log_level`:
+#   - Off
+#   - Error
+#   - Warn
+#   - Info
+#   - Debug
+#   - Trace
+#log_level: Warn
 
-  # Print all received window events.
-  #print_events: false
+# Print all received window events.
+#print_events: false
