Removed unnecessary duplicates

--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -424,20 +424,12 @@ wintypes:
 
 # Opacity
 opacity-rule = [
-    # "85:class_g = 'Alacritty'",
-	"90:class_g = 'subl'",
-	"90:class_g = 'Subl'",
-	"95:class_g = 'boost note - local'",
-	"95:class_g = 'Boost Note - Local'",
-	"95:class_g = 'Thunderbird'",
-	"95:class_g = 'bitwarden'",
-	"90:class_g = 'Bitwarden'",
-	"95:class_g = 'Code'",
-	"95:class_g = 'code'",
-	"95:class_g = 'code-oss'",
-  "95:class_g = 'vscodium'",
+  "95:class_g = 'Thunderbird'",
+  "90:class_g = 'Bitwarden'",
   "95:class_g = 'VSCodium'",
-  "90:name = 'Spotify'"
+  "90:name = 'Spotify'",
+  "95:class_g = 'qBittorrent'",
+  "95:class_g = 'Pacfinder'",
 ]
 
 
