--- a/.config/paru/paru.conf
+++ b/.config/paru/paru.conf
@@ -4,7 +4,7 @@
 PgpFetch
 Devel
 Provides
-DevelSuffixes = -git -cvs -snv -bzr -darcs -always
+DevelSuffixes = -git -cvs -snv -bzr -darcs -always -hg
 UpgradeMenu
 #BottomUp
 #RemoveMake
