Update default browser

--- a/.config/flameshot/flameshot.ini
+++ b/.config/flameshot/flameshot.ini
@@ -8,7 +8,10 @@ predefinedColorPaletteLarge=true
 saveAfterCopy=true
 saveAsFileExtension=png
 savePath=/home/kristofers/Pictures/screenshots
+savePathFixed=false
+showMagnifier=true
 showStartupLaunchMessage=false
+squareMagnifier=true
 uiColor=#ffffff
 undoLimit=100
 
