--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -430,6 +430,8 @@ opacity-rule = [
   "90:name = 'Spotify'",
   "95:class_g = 'qBittorrent'",
   "95:class_g = 'Pacfinder'",
+  "95:class_g = 'Ripcord'",
+  "95:class_g = 'TelegramDesktop'",
 ]
 
 
