--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -431,6 +431,7 @@ opacity-rule = [
   "95:class_g = 'qBittorrent'",
   "95:class_g = 'Pacfinder'",
   "95:class_g = 'Ripcord'",
+  "95:class_g = 'discord'",
   "95:class_g = 'TelegramDesktop'",
 ]
 
