--- a/.config/starship/starship.toml
+++ b/.config/starship/starship.toml
@@ -15,5 +15,5 @@ disabled = true
 
 [cmd_duration]
 min_time = 0
-show_milliseconds = true
+show_milliseconds = false
 format = "took [$duration](bold yellow)"
