--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -433,6 +433,7 @@ opacity-rule = [
   "95:class_g = 'Ripcord'",
   "95:class_g = 'discord'",
   "95:class_g = 'TelegramDesktop'",
+  "90:class_g = 'kdeconnect.app'",
 ]
 
 
