--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -92,11 +92,11 @@ fading = false
 
 # Opacity change between steps while fading in. (0.01 - 1.0, defaults to 0.028)
 # fade-in-step = 0.028
-fade-in-step = 0.03;
+fade-in-step = 0.1;
 
 # Opacity change between steps while fading out. (0.01 - 1.0, defaults to 0.03)
 # fade-out-step = 0.03
-fade-out-step = 0.03;
+fade-out-step = 0.05;
 
 # The time between steps in fade step, in milliseconds. (> 0, defaults to 10)
 # fade-delta = 10
@@ -244,7 +244,7 @@ detect-client-opacity = true;
 # Specify refresh rate of the screen. If not specified or 0, picom will
 # try detecting this with X RandR extension.
 #
-refresh-rate = 60
+refresh-rate = 75
 #refresh-rate = 0
 
 # Limit picom to repaint at most once every 1 / 'refresh_rate' second to
@@ -427,13 +427,14 @@ opacity-rule = [
   "95:class_g = 'Thunderbird'",
   "90:class_g = 'Bitwarden'",
   "95:class_g = 'VSCodium'",
-  "90:name = 'Spotify'",
+  "90:class_g = 'Spotify'",
   "95:class_g = 'qBittorrent'",
   "95:class_g = 'Pacfinder'",
   "95:class_g = 'Ripcord'",
   "95:class_g = 'discord'",
   "95:class_g = 'TelegramDesktop'",
   "90:class_g = 'kdeconnect.app'",
+  "95:class_g = 'Lutris'",
 ]
 
 
@@ -441,4 +442,4 @@ opacity-rule = [
 # Blur
 blur-background = true;
 blur-method = "dual_kawase";
-blur-strength = 3;
+blur-strength = 4;
