--- a/.config/btop/btop.conf
+++ b/.config/btop/btop.conf
@@ -1,4 +1,4 @@
-#? Config file for btop v. 1.2.8
+#? Config file for btop v. 1.2.13
 
 #* Name of a btop++/bpytop/bashtop formatted ".theme" file, "Default" and "TTY" for builtin themes.
 #* Themes should be placed in "../share/btop/themes" relative to binary or "$HOME/.config/btop/themes"
@@ -16,7 +16,7 @@ force_tty = False
 
 #* Define presets for the layout of the boxes. Preset 0 is always all boxes shown with default settings. Max 9 presets.
 #* Format: "box_name:P:G,box_name:P:G" P=(0 or 1) for alternate positions, G=graph symbol to use for box.
-#* Use withespace " " as separator between different presets.
+#* Use whitespace " " as separator between different presets.
 #* Example: "cpu:0:default,mem:0:tty,proc:1:default cpu:0:braille,proc:0:tty"
 presets = "cpu:1:default,proc:0:default cpu:0:default,mem:0:default,net:0:default cpu:0:block,net:0:tty"
 
@@ -47,14 +47,14 @@ graph_symbol_net = "default"
 graph_symbol_proc = "default"
 
 #* Manually set which boxes to show. Available values are "cpu mem net proc", separate values with whitespace.
-shown_boxes = "mem proc net cpu"
+shown_boxes = "mem cpu net proc"
 
 #* Update time in milliseconds, recommended 2000 ms or above for better sample times for graphs.
 update_ms = 1000
 
 #* Processes sorting, "pid" "program" "arguments" "threads" "user" "memory" "cpu lazy" "cpu direct",
 #* "cpu lazy" sorts top process over time (easier to follow), "cpu direct" updates top process directly.
-proc_sorting = "cpu direct"
+proc_sorting = "memory"
 
 #* Reverse sorting order, True or False.
 proc_reversed = False
@@ -73,6 +73,9 @@ proc_per_core = False
 
 #* Show process memory as bytes instead of percent.
 proc_mem_bytes = True
+
+#* Show cpu graph for each process.
+proc_cpu_graphs = True
 
 #* Use /proc/[pid]/smaps for memory information in the process info box (very slow but more accurate)
 proc_info_smaps = False
@@ -164,6 +167,9 @@ only_physical = True
 
 #* Read disks list from /etc/fstab. This also disables only_physical.
 use_fstab = True
+
+#* Setting this to True will hide all datasets, and only show ZFS pools. (IO stats will be calculated per-pool)
+zfs_hide_datasets = False
 
 #* Set to true to show available disk space for privileged users.
 disk_free_priv = False
