--- a/.config/btop/btop.conf
+++ b/.config/btop/btop.conf
@@ -47,7 +47,7 @@ graph_symbol_net = "default"
 graph_symbol_proc = "default"
 
 #* Manually set which boxes to show. Available values are "cpu mem net proc", separate values with whitespace.
-shown_boxes = "mem cpu net proc"
+shown_boxes = "mem proc net cpu"
 
 #* Update time in milliseconds, recommended 2000 ms or above for better sample times for graphs.
 update_ms = 1000
@@ -157,7 +157,7 @@ zfs_arc_cached = True
 show_swap = True
 
 #* Show swap as a disk, ignores show_swap value above, inserts itself after first disk.
-swap_disk = True
+swap_disk = False
 
 #* If mem box should be split to also show disks info.
 show_disks = True
@@ -166,7 +166,7 @@ show_disks = True
 only_physical = True
 
 #* Read disks list from /etc/fstab. This also disables only_physical.
-use_fstab = True
+use_fstab = False
 
 #* Setting this to True will hide all datasets, and only show ZFS pools. (IO stats will be calculated per-pool)
 zfs_hide_datasets = False
@@ -181,7 +181,7 @@ show_io_stat = True
 io_mode = False
 
 #* Set to True to show combined read/write io graphs in io mode.
-io_graph_combined = False
+io_graph_combined = True
 
 #* Set the top speed for the io graphs in MiB/s (100 by default), use format "mountpoint:speed" separate disks with whitespace " ".
 #* Example: "/mnt/media:100 /:20 /boot:1".
