Added custom names

--- a/.config/fastfetch/config.conf
+++ b/.config/fastfetch/config.conf
@@ -26,7 +26,7 @@
 # List available modules with "fastfetch --list-modules".
 # Get the default structure with "fastfetch --print-structure".
 # --structure Title:Separator:OS:Host:Kernel:Uptime:Packages:Shell:Resolution:DE:WM:WMTheme:Theme:Icons:Font:Cursor:Terminal:TerminalFont:CPU:GPU:Memory:Disk:Battery:Locale:Break:Colors
---structure Title:Separator:OS:Host:Kernel:Uptime:Packages:Resolution:DE:WM:WMTheme:Theme:Icons:CPU:GPU:Memory:Disk:Battery:Song:Break
+--structure Title:Separator:OS:Host:Kernel:Uptime:Break:Packages:Resolution:Break:CPU:GPU:Memory:Disk:Battery:Break:Song:PublicIP:DateTime
 
 # Multithreading option:
 # Sets if fastfetch should use multiple threads to detect the values.
@@ -88,13 +88,13 @@
 # Adds a padding to the left and the right side of the logo.
 # Must be a positive integer.
 # Default is 0.
-#--logo-padding 0
+# --logo-padding 0
 
 # Logo padding left option:
 # Adds a padding to the left side of the logo.
 # Must be a positive integer.
 # Default is 0.
-#--logo-padding-left 0
+# --logo-padding-left 0
 
 # Logo padding right option:
 # Adds a padding to the right side of the logo.
@@ -149,35 +149,61 @@
 # Key options:
 # Sets the displayed key of a module
 # Can be any string. Some of theme take an argument like a format string. See "fastfetch --help format" for help.
---os-key OS
---host-key Host
---kernel-key Kernel
---uptime-key Uptime
+# --os-key OS
+# --os-key OS
+# --os-key ""
+--os-key BTW I use
+# --host-key Host
+# --host-key ""
+--host-key Mainframe
+# --kernel-key Kernel
+# --kernel-key ""
+--kernel-key Penguin
+# --uptime-key Uptime
+--uptime-key Time without touching grass
 --processes-key Processes
---packages-key Packages
---shell-key Shell
---resolution-key Resolution {1}
---de-key DE
---wm-key WM
---wm-theme-key WM Theme
---theme-key Theme
---icons-key Icons
---font-key Font
---cursor-key Cursor
---terminal-key Terminal
---terminal-font-key Terminal Font
---cpu-key CPU
---cpu-usage-key CPU Usage
+# --packages-key Packages
+# --packages-key ""
+--packages-key Bloat amount
+# --shell-key Shell
+# --wm-key ""
+# --shell-key ""
+--shell-key Krab
+# --resolution-key Resolution {1}
+# --resolution-key Flex {1}
+# --de-key DE
+# --wm-key WM
+# --wm-theme-key WM Theme
+# --theme-key Theme
+# --icons-key Icons
+# --font-key Font
+# --cursor-key Cursor
+# --terminal-key Terminal
+# --terminal-key ""
+# --terminal-font-key Terminal Font
+# --terminal-font-key ""
+# --cpu-key CPU
+# --cpu-key ""
+--cpu-key Toaster
+# --cpu-usage-key CPU Usage
 # --gpu-key GPU {1}
---memory-key Memory
---disk-key Disk ({1})
---battery-key Battery {1}
---locale-key Locale
---local-ip-key Local IP ({1})
---public-ip-key Public IP
+# --gpu-key "﬙"
+--gpu-key Crypto Miner
+# --memory-key Memory
+--memory-key I forgot
+# --disk-key Disk ({1})
+--disk-key Floppy {1}
+# --battery-key Battery {1}
+--battery-key Juice
+# --locale-key Locale
+# --local-ip-key Local IP ({1})
+# --public-ip-key Public IP
+# --public-ip-key Doxxed
+--public-ip-key AAA Server
 --player-key Media Player
---song-key Song
---datetime-key Date Time
+# --song-key Song
+# --song-key Earrape
+--datetime-key Spacetime
 
 # Format options:
 # Sets the format string for module values.
@@ -195,12 +221,12 @@
 # --de-format
 # --wm-format
 # --wm-theme-format
-#--theme-format
-#--icons-format
-#--font-format
-#--cursor-format
-#--terminal-format
-#--terminal-font-format
+# --theme-format
+# --icons-format
+# --font-format
+# --cursor-format
+# --terminal-format
+# --terminal-font-format
 # --cpu-format
 # --cpu-usage-format
 # --gpu-format
@@ -210,9 +236,9 @@
 # --locale-format
 # --local-ip-format
 # --public-ip-format
-#--player-format
-#--song-format
-#--datetime-format
+# --player-format
+# --song-format
+# --datetime-format
 
 # Library options:
 # Sets an user specific path to a library to load.
@@ -231,3 +257,5 @@
 #--lib-rpm /usr/lib/librpm.so
 #--lib-imagemagick /usr/lib/libMagickCore-7.Q16HDRI.so
 #--lib-z /usr/lib/libz.so
+
+
