Changes default save location

--- a/.config/flameshot/flameshot.ini
+++ b/.config/flameshot/flameshot.ini
@@ -1,9 +1,8 @@
 [General]
 contrastOpacity=188
-copyAndCloseAfterUpload=false
-filenamePattern=%Y_%m_%d_%H_%M_%S
+filenamePattern=%Y-%m-%d_%H-%M-%S
 saveAfterCopy=true
-savePath=/home/kristofers/Pictures/screenshots
+savePath=~/Pictures/screenshots
 showMagnifier=true
 squareMagnifier=true
 uiColor=#ff0000
