--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -424,17 +424,19 @@ wintypes:
 
 # Opacity
 opacity-rule = [
-  "95:class_g = 'Thunderbird'",
   "90:class_g = 'Bitwarden'",
-  "95:class_g = 'VSCodium'",
+  "90:class_g = 'Lutris'",
+  "90:class_g = 'Pacfinder'",
   "90:class_g = 'Spotify'",
-  "95:class_g = 'qBittorrent'",
-  "95:class_g = 'Pacfinder'",
-  "95:class_g = 'Ripcord'",
-  "95:class_g = 'discord'",
-  "95:class_g = 'TelegramDesktop'",
   "90:class_g = 'kdeconnect.app'",
-  "95:class_g = 'Lutris'",
+  "90:class_g = 'obsidian'",
+  "95:class_g = 'Ferdium'",
+  "95:class_g = 'Ripcord'",
+  "95:class_g = 'TelegramDesktop'",
+  "95:class_g = 'Thunderbird'",
+  "95:class_g = 'VSCodium'",
+  "95:class_g = 'discord'",
+  "95:class_g = 'qBittorrent'",
 ]
 
 
