Updated `Hyprland` configs

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -107,14 +107,16 @@ windowrulev2 = fullscreen, class:mpv
 
 windowrulev2 = workspace 7, class:tuxedo-control-center
 windowrulev2 = workspace 7, class:corectrl
+windowrulev2 = workspace 7, class:thunderbird
+windowrulev2 = opacity 0.95, class:thunderbird
 
 windowrulev2 = workspace 8, class:discord
 windowrulev2 = opacity 0.95, class:discord
 windowrulev2 = workspace 8, class:Ripcord
-windowrulev2 = workspace 8, class:thunderbird
-windowrulev2 = opacity 0.95, class:thunderbird
 windowrulev2 = workspace 8, class:telegram
 windowrulev2 = opacity 0.95, class:telegram
+windowrulev2 = workspace 8, class:Ferdium
+windowrulev2 = opacity 0.9, class:Ferdium
 
 
 windowrulev2 = workspace 9, class:Spotify
@@ -200,11 +202,11 @@ bind = $mainMod SHIFT, L, movewindow, r
 bind = $mainMod SHIFT, H, movewindow, l
 
 
-bind = CTRL, Print, exec, flameshot gui
-bind = SHIFT, Print, exec, flameshot screen
-bind = , Print, exec, flameshot full
+# bind = $mainMod CTRL, P, exec, wayshot -f "$(HOME)/Pictures/screenshots/$(date + '%s.png')" -s "$(slurp -f '%x %y %w %y')" --stdout | wl-copy
+# bind = $mainMod CTRL, P, exec, wayshot -s "$(slurp -f '%x %y %w %y')" --stdout | wl-copy
+# bind = $mainMod, , exec, wayshot -f "$(HOME)/Pictures/screenshots/$(date + '%s.png')" 
 
-bind = $mainMod SHIFT, p, exec, hyprpicker -a  # colorpicker
+bind = $mainMod ALT, P, exec, hyprpicker -a  # colorpicker
 
 # Control keybinds
 bindel = , XF86MonBrightnessUp, exec, brightnessctl set +2%  # increase brightness by 2%
