--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -15,7 +15,8 @@ monitor=,preferred,auto,1
 
 # Execute your favorite apps at launch
 # exec-once = waybar & hyprpaper & firefox
-exec-once = pipewire & pipewire-pulse & wireplumber & waybar & hyprpaper & tuxedo-control-center & flameshot & librewolf & nextcloud & xrdb -load "$XDG_CONFIG_HOME"/X11/xresources & /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
+exec-once = pipewire & pipewire-pulse & wireplumber & waybar & hyprpaper & tuxedo-control-center & flameshot & librewolf & nextcloud & /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1 & dbus-update-activation-environment DISPLAY XAUTHORITY WAYLAND_DISPLAY & xrdb "$XDG_CONFIG_HOME/X11/xresources"
+
 
 
 # Source a file (multi-file configs)
@@ -29,11 +30,14 @@ input {
     kb_options = 
     kb_rules =
     numlock_by_default = true
+    repeat_rate = 50
+    repeat_delay = 300
 
     follow_mouse = 1
 
     touchpad {
         natural_scroll = yes
+        disable_while_typing = false
     }
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
@@ -205,6 +209,9 @@ bind = $mainMod SHIFT, H, movewindow, l
 # bind = $mainMod CTRL, P, exec, wayshot -f "$(HOME)/Pictures/screenshots/$(date + '%s.png')" -s "$(slurp -f '%x %y %w %y')" --stdout | wl-copy
 # bind = $mainMod CTRL, P, exec, wayshot -s "$(slurp -f '%x %y %w %y')" --stdout | wl-copy
 # bind = $mainMod, , exec, wayshot -f "$(HOME)/Pictures/screenshots/$(date + '%s.png')" 
+bind = CTRL, PRINT, exec, hyprshot -m region
+bind = , PRINT, exec, hyprshot -m  output
+bind = SHIFT, PRINT, exec, hyprshot -m window
 
 bind = $mainMod ALT, P, exec, hyprpicker -a  # colorpicker
 
