--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -22,13 +22,11 @@ env:
   # check the local terminfo database and use `alacritty` if it is
   # available, otherwise `xterm-256color` is used.
   TERM: alacritty
-
 # Background opacity
 #
 # Window opacity as a floating point number from `0.0` to `1.0`.
 # The value `0.0` is completely transparent and `1.0` is opaque.
 # background_opacity: 0.9
-
 window:
   # Window dimensions (changes require restart)
   #
@@ -38,7 +36,6 @@ window:
   dimensions:
     columns: 0
     lines: 0
-
   opacity: 0.9
   # Window position (changes require restart)
   #
@@ -55,10 +52,8 @@ window:
   padding:
     x: 0
     y: 0
-
   # Spread additional padding evenly around the terminal content.
   dynamic_padding: true
-
   # Window decorations
   #
   # Values for `decorations`:
@@ -69,7 +64,6 @@ window:
   #     - transparent: Title bar, transparent background and title bar buttons
   #     - buttonless: Title bar, transparent background and no title bar buttons
   decorations: none
-
   # Startup Mode (changes require restart)
   #
   # Values for `startup_mode`:
@@ -80,13 +74,10 @@ window:
   # Values for `startup_mode` (macOS only):
   #   - SimpleFullscreen
   startup_mode: Windowed
-
   # Window title
   title: Alacritty
-
   # Allow terminal applications to change Alacritty's window title.
   dynamic_title: true
-
   # Window class (Linux/BSD only):
   # class:
   # Application instance name
@@ -98,16 +89,13 @@ window:
   #
   # Override the variant of the GTK theme. Commonly supported values are `dark`
   # and `light`. Set this to `None` to use the default theme variant.
-  decorations_theme_variant: dark
-
+  decorations_theme_variant: Dark
 scrolling:
   # Maximum number of lines in the scrollback buffer.
   # Specifying '0' will disable scrolling.
   history: 10000
-
   # Scrolling distance multiplier.
   multiplier: 3
-
 # Font configuration
 font:
   # Normal (roman) font face
@@ -119,10 +107,8 @@ font:
     #   - (Linux/BSD) monospace
     #   - (Windows) Consolas
     family: JetBrainsMono NF
-
     # The `style` can be specified to pick a specific face.
     style: Regular
-
   # Bold font face
   bold:
     # Font family
@@ -130,10 +116,8 @@ font:
     # If the bold family is not specified, it will fall back to the
     # value specified for the normal font.
     family: JetBrainsMono NF
-
     # The `style` can be specified to pick a specific face.
     style: Bold
-
   # Italic font face
   italic:
     # Font family
@@ -141,10 +125,8 @@ font:
     # If the italic family is not specified, it will fall back to the
     # value specified for the normal font.
     family: JetBrainsMono NF
-
     # The `style` can be specified to pick a specific face.
     style: Italic
-
   # Bold italic font face
   bold_italic:
     # Font family
@@ -152,52 +134,43 @@ font:
     # If the bold italic family is not specified, it will fall back to the
     # value specified for the normal font.
     family: JetBrainsMono NF
-
     # The `style` can be specified to pick a specific face.
     style: Bold Italic
-
   # Point size
   size: 11.0
-
   # Offset is the extra space around each character. `offset.y` can be thought
   # of as modifying the line spacing, and `offset.x` as modifying the letter
   # spacing.
   offset:
     x: 0
     y: -1
-
   # Glyph offset determines the locations of the glyphs within their cells with
   # the default being at the bottom. Increasing `x` moves the glyph to the
   # right, increasing `y` moves the glyph upward.
   glyph_offset:
     x: 0
     y: 0
-
-  # Thin stroke font rendering (macOS only)
-  #
-  # Thin strokes are suitable for retina displays, but for non-retina screens
-  # it is recommended to set `use_thin_strokes` to `false`.
-  # use_thin_strokes: false
-
+    # Thin stroke font rendering (macOS only)
+    #
+    # Thin strokes are suitable for retina displays, but for non-retina screens
+    # it is recommended to set `use_thin_strokes` to `false`.
+    # use_thin_strokes: false
 # If `true`, bold text is drawn using the bright color variants.
 draw_bold_text_with_bright_colors: true
-
 # Colors (Tomorrow Night)
 colors:
   # Default colors
   primary:
-    background: '#282a36'
-    foreground: '#f8f8f2'
-
+    background: "#282a36"
+    foreground: "#f8f8f2"
     # Bright and dim foreground colors
     #
     # The dimmed foreground color is calculated automatically if it is not
     # present. If the bright foreground color is not set, or
     # `draw_bold_text_with_bright_colors` is `false`, the normal foreground
     # color will be used.
-    dim_foreground: '#828482'
-    bright_foreground: '#ffffff'
-
+    dim_foreground: "#828482"
+    bright_foreground: "#ffffff"
   # Cursor colors
   #
   # Colors which should be used to draw the terminal cursor.
@@ -207,7 +180,6 @@ colors:
   cursor:
     text: CellBackground
     cursor: CellForeground
-
   # Vi mode cursor colors
   #
   # Colors for the cursor when the vi mode is active.
@@ -217,7 +189,6 @@ colors:
   vi_mode_cursor:
     text: CellBackground
     cursor: CellForeground
-
   # Search colors
   #
   # Colors used for the search bar and match highlighting.
@@ -225,16 +196,14 @@ colors:
     # Allowed values are CellForeground/CellBackground, whichq reference the
     # affected cell, or hexadecimal colors like #ff00ff.
     matches:
-      foreground: '#44475a'
-      background: '#50fa7b'
+      foreground: "#44475a"
+      background: "#50fa7b"
     focused_match:
-      foreground: '#44475a'
-      background: '#ffb86c'
-
+      foreground: "#44475a"
+      background: "#ffb86c"
     footer_bar:
-      background: '#282a36'
-      foreground: '#f8f8f2'
-
+      background: "#282a36"
+      foreground: "#f8f8f2"
   # Keyboard regex hints
   hints:
     # First character in the hint label
@@ -242,17 +211,15 @@ colors:
     # Allowed values are CellForeground/CellBackground, which reference the
     # affected cell, or hexadecimal colors like #ff00ff.
     start:
-      foreground: '#282a36'
-      background: '#f1fa8c'
-
+      foreground: "#282a36"
+      background: "#f1fa8c"
     # All characters after the first one in the hint label
     #
     # Allowed values are CellForeground/CellBackground, which reference the
     # affected cell, or hexadecimal colors like #ff00ff.
     end:
-      foreground: '#f1fa8c'
-      background: '#282a36'
-
+      foreground: "#f1fa8c"
+      background: "#282a36"
   # Line indicator
   #
   # Color used for the indicator displaying the position in history during
@@ -272,29 +239,26 @@ colors:
   selection:
     text: CellBackground
     background: CellForeground
-
   # Normal colors
   normal:
-    black: '#21222c'
-    red: '#ff5555'
-    green: '#50fa7b'
-    yellow: '#f1fa8c'
-    blue: '#bd93f9'
-    magenta: '#ff79c6'
-    cyan: '#8be9fd'
-    white: '#f8f8f2'
-
+    black: "#21222c"
+    red: "#ff5555"
+    green: "#50fa7b"
+    yellow: "#f1fa8c"
+    blue: "#bd93f9"
+    magenta: "#ff79c6"
+    cyan: "#8be9fd"
+    white: "#f8f8f2"
   # Bright colors
   bright:
-    black: '#6272a4'
-    red: '#ff6e6e'
-    green: '#69ff94'
-    yellow: '#ffffa5'
-    blue: '#d6acff'
-    magenta: '#ff92df'
-    cyan: '#a4ffff'
-    white: '#ffffff'
-
+    black: "#6272a4"
+    red: "#ff6e6e"
+    green: "#69ff94"
+    yellow: "#ffffa5"
+    blue: "#d6acff"
+    magenta: "#ff92df"
+    cyan: "#a4ffff"
+    white: "#ffffff"
   # Dim colors
   #
   # If the dim colors are not set, they will be calculated automatically based
@@ -325,7 +289,6 @@ colors:
   # the default background. When set to `true` all cells will be transparent
   # regardless of their background color.
   transparent_background_colors: false
-
 # Bell
 #
 # The bell is rung every time the BEL control character is received.
@@ -366,15 +329,12 @@ colors:
 #     args: ["Hello, World!"]
 #
 #command: None
-
 selection:
   # This string contains all characters that are used as separators for
   # "semantic words" in Alacritty.
   semantic_escape_chars: ",│`|:\"' ()[]{}<>\t"
-
   # When set to `true`, selected text will be copied to the primary clipboard.
   save_to_clipboard: true
-
 cursor:
   # Cursor style
   style:
@@ -385,7 +345,6 @@ cursor:
     #   - _ Underline
     #   - | Beam
     shape: Beam
-
     # Cursor blinking state
     #
     # Values for `blinking`:
@@ -394,7 +353,6 @@ cursor:
     #   - On: Enable blinking by default
     #   - Always: Force the cursor to always blink
     #blinking: Off
-
   # Vi mode cursor style
   #
   # If the vi mode cursor style is `None` or not specified, it will fall back to
@@ -402,18 +360,15 @@ cursor:
   #
   # See `cursor.style` for available options.
   vi_mode_style: Block
-
   # Cursor blinking interval in milliseconds.
   #blink_interval: 750
 
   # If this is `true`, the cursor will be rendered as a hollow box when the
   # window is not focused.
   unfocused_hollow: false
-
   # Thickness of the cursor relative to the cell width as floating point number
   # from `0.0` to `1.0`.
   #thickness: 0.15
-
 # Live config reload (changes require restart)
 #live_config_reload: true
 
@@ -530,8 +485,7 @@ shell:
 # - `mods` (see key bindings)
 mouse_bindings:
   # - { mouse: Right,             action: ExpandSelection }
-  - { mouse: Middle, mode: ~Vi, action: PasteSelection }
-
+  - {mouse: Middle, mode: ~Vi, action: PasteSelection}
 # Key bindings
 #
 # Key bindings are specified as a list of objects. For example, this is the
@@ -743,10 +697,10 @@ key_bindings:
   #- { key: Copy,                                        action: Copy          }
   # - { key: L,         mods: Control,                    action: clear        }
   #- { key: L,         mods: Control, mode: ~Vi|~Search, chars: "\x0c"         }
-  - { key: Up, mods: Shift, mode: ~Alt, action: ScrollPageUp }
-  - { key: Down, mods: Shift, mode: ~Alt, action: ScrollPageDown }
-  - { key: Home, mods: Shift, mode: ~Alt, action: ScrollToTop }
-  - { key: End, mods: Shift, mode: ~Alt, action: ScrollToBottom }
+  - {key: Up, mods: Shift, mode: ~Alt, action: ScrollPageUp}
+  - {key: Down, mods: Shift, mode: ~Alt, action: ScrollPageDown}
+  - {key: Home, mods: Shift, mode: ~Alt, action: ScrollToTop}
+  - {key: End, mods: Shift, mode: ~Alt, action: ScrollToBottom,}
   # - { key: Delete,                                      actions: Del         }
   # - { key: Key9,      mods: Control|Shift,              action: CreateNewWindow, }
 
@@ -814,22 +768,21 @@ key_bindings:
   #- { key: Return, mods: Shift,   mode: Search|~Vi, action: SearchFocusPrevious   }
 
   # (Windows, Linux, and BSD only)
-  - { key: V, mods: Control|Shift, mode: ~Vi, action: Paste }
-  - { key: C, mods: Control|Shift, action: Copy }
-  - { key: F, mods: Control|Shift, mode: ~Search, action: SearchForward }
-  - { key: B, mods: Control|Shift, mode: ~Search, action: SearchBackward }
+  - {key: V, mods: Control|Shift, mode: ~Vi, action: Paste}
+  - {key: C, mods: Control|Shift, action: Copy}
+  - {key: F, mods: Control|Shift, mode: ~Search, action: SearchForward}
+  - {key: B, mods: Control|Shift, mode: ~Search, action: SearchBackward}
   #- { key: C,              mods: Control|Shift, mode: Vi|~Search, action: ClearSelection   }
   #- { key: Insert,         mods: Shift,                           action: PasteSelection   }
-  - { key: Key0, mods: Control, action: ResetFontSize }
-  - { key: Equals, mods: Control, action: IncreaseFontSize }
+  - {key: Key0, mods: Control, action: ResetFontSize}
+  - {key: Equals, mods: Control, action: IncreaseFontSize}
   # - { key: Plus,           mods: Control,                         action: IncreaseFontSize }
-  - { key: NumpadAdd, mods: Control, action: IncreaseFontSize }
-  - { key: Minus, mods: Control, action: DecreaseFontSize }
-  - { key: NumpadSubtract, mods: Control, action: DecreaseFontSize }
-  - { key: Q, mods: Control|Shift, action: Quit }
+  - {key: NumpadAdd, mods: Control, action: IncreaseFontSize}
+  - {key: Minus, mods: Control, action: DecreaseFontSize}
+  - {key: NumpadSubtract, mods: Control, action: DecreaseFontSize}
+  - {key: Q, mods: Control|Shift, action: Quit}
   # (Windows only)
-  - { key: F11, action: ToggleFullscreen }
-
+  - {key: F11, action: ToggleFullscreen,}
   # (macOS only)
   #- { key: K,              mods: Command, mode: ~Vi|~Search, chars: "\x0c"                 }
   #- { key: K,              mods: Command, mode: ~Vi|~Search, action: ClearHistory          }
