--- a/.config/transmission-daemon/settings.json
+++ b/.config/transmission-daemon/settings.json
@@ -6,6 +6,10 @@
     "alt-speed-time-enabled": false,
     "alt-speed-time-end": 1020,
     "alt-speed-up": 50,
+    "announce-ip": "",
+    "announce-ip-enabled": false,
+    "anti-brute-force-enabled": false,
+    "anti-brute-force-threshold": 100,
     "bind-address-ipv4": "0.0.0.0",
     "bind-address-ipv6": "::",
     "blocklist-date": 1676459465,
@@ -14,16 +18,17 @@
     "blocklist-url": "http://list.iblocklist.com/?list=ydxerpxkpcfqjaybcssw&fileformat=p2p&archiveformat=gz",
     "cache-size-mb": 4,
     "compact-view": false,
+    "default-trackers": "",
     "details-window-height": 571,
     "details-window-width": 700,
     "dht-enabled": true,
-    "download-dir": "/home/kristofers/ISOs",
+    "download-dir": "/home/kristofers/Torrents",
     "download-queue-enabled": true,
     "download-queue-size": 5,
     "encryption": 1,
     "idle-seeding-limit": 30,
     "idle-seeding-limit-enabled": false,
-    "incomplete-dir": "/home/kristofers/Downloads",
+    "incomplete-dir": "/home/kristofers/Torrents/Incomplete-Torrents",
     "incomplete-dir-enabled": true,
     "inhibit-desktop-hibernation": false,
     "lpd-enabled": false,
@@ -32,7 +37,7 @@
     "main-window-width": 1900,
     "main-window-x": 1928,
     "main-window-y": 29,
-    "message-level": 1,
+    "message-level": 2,
     "peer-congestion-algorithm": "",
     "peer-id-ttl-hours": 6,
     "peer-limit-global": 200,
@@ -41,7 +46,7 @@
     "peer-port-random-high": 65535,
     "peer-port-random-low": 49152,
     "peer-port-random-on-start": false,
-    "peer-socket-tos": "default",
+    "peer-socket-tos": "le",
     "pex-enabled": true,
     "port-forwarding-enabled": true,
     "preallocation": 1,
@@ -58,13 +63,18 @@
     "rpc-host-whitelist-enabled": true,
     "rpc-password": "{7fc260c68dfba7c7f3fbed9c837945f36b835d28XmkvfKXx",
     "rpc-port": 9091,
+    "rpc-socket-mode": "0750",
     "rpc-url": "/transmission/",
     "rpc-username": "",
     "rpc-whitelist": "127.0.0.1,::1",
     "rpc-whitelist-enabled": true,
     "scrape-paused-torrents-enabled": true,
+    "script-torrent-added-enabled": false,
+    "script-torrent-added-filename": "",
     "script-torrent-done-enabled": false,
     "script-torrent-done-filename": "/home/kristofers/.local/bin/tordone",
+    "script-torrent-done-seeding-enabled": false,
+    "script-torrent-done-seeding-filename": "",
     "seed-queue-enabled": false,
     "seed-queue-size": 10,
     "show-backup-trackers": false,
@@ -83,13 +93,15 @@
     "speed-limit-up-enabled": false,
     "start-added-torrents": true,
     "statusbar-stats": "total-ratio",
+    "tcp-enabled": true,
     "torrent-added-notification-enabled": true,
+    "torrent-added-verify-mode": "fast",
     "torrent-complete-notification-enabled": true,
     "torrent-complete-sound-command": "canberra-gtk-play -i complete-download -d 'transmission torrent downloaded'",
     "torrent-complete-sound-enabled": true,
     "trash-can-enabled": true,
     "trash-original-torrent-files": false,
-    "umask": 18,
+    "umask": "022",
     "upload-slots-per-torrent": 14,
     "user-has-given-informed-consent": true,
     "utp-enabled": true
