--- a/.config/fastfetch/config.conf
+++ b/.config/fastfetch/config.conf
@@ -8,7 +8,7 @@
 # This file was shipped with 1.3.3.
 # Use fastfetch --print-config > ~/.config/fastfetch/config.conf to overwrite this with the current defaults
 
-# Below some often usefull options are listed. Uncomment and modify them so they take affect.
+# Below some often useful options are listed. Uncomment and modify them so they take affect.
 # Note that there are a lot more options than the ones listed here, take a look at "fastfetch --help".
 # Of course all of them can be made persistent here too.
 
@@ -26,7 +26,7 @@
 # List available modules with "fastfetch --list-modules".
 # Get the default structure with "fastfetch --print-structure".
 # --structure Title:Separator:OS:Host:Kernel:Uptime:Packages:Shell:Resolution:DE:WM:WMTheme:Theme:Icons:Font:Cursor:Terminal:TerminalFont:CPU:GPU:Memory:Disk:Battery:Locale:Break:Colors
---structure Title:Separator:OS:Host:Kernel:Uptime:Break:Packages:Resolution:Break:CPU:GPU:Memory:Disk:Battery:Break:Song:PublicIP:DateTime
+--structure Title:Separator:OS:Host:Kernel:Uptime:Break:Packages:Break:Memory:Disk:Battery:Break:DateTime:Break:Colors
 
 # Multithreading option:
 # Sets if fastfetch should use multiple threads to detect the values.
@@ -79,8 +79,8 @@
 # Default is the one specified by the logo.
 # Use "fastfetch --help color" to learn more and see examples.
 # Valid index range is [1-9].
-#--logo-color-1 red
-#--logo-color-2 32
+# --logo-color-1 red
+# --logo-color-2 32
 # [...]
 # --logo-color-9 yellow
 
@@ -106,7 +106,7 @@
 # Sets if the remaining logo should be printed, it is has more lines than modules to show.
 # Must be true or false.
 # Default is true.
-#--logo-print-remaining true
+# --logo-print-remaining true
 
 # Color option:
 # Sets the color of the keys.
@@ -161,7 +161,7 @@
 --kernel-key Penguin
 # --uptime-key Uptime
 --uptime-key Time without touching grass
---processes-key Processes
+# --processes-key Processes
 # --packages-key Packages
 # --packages-key ""
 --packages-key Bloat amount
@@ -199,7 +199,7 @@
 # --local-ip-key Local IP ({1})
 # --public-ip-key Public IP
 # --public-ip-key Doxxed
---public-ip-key AAA Server
+# --public-ip-key AAA Server
 --player-key Media Player
 # --song-key Song
 # --song-key Earrape
