--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -15,7 +15,7 @@ monitor=,preferred,auto,1
 
 # Execute your favorite apps at launch
 # exec-once = waybar & hyprpaper & firefox
-exec-once = pipewire & pipewire-pulse & wireplumber & waybar & hyprpaper & tuxedo-control-center & flameshot & librewolf & nextcloud & /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1 & dbus-update-activation-environment DISPLAY XAUTHORITY WAYLAND_DISPLAY & xrdb "$XDG_CONFIG_HOME/X11/xresources"
+exec-once = pipewire & pipewire-pulse & wireplumber & waybar & hyprpaper & tuxedo-control-center & flameshot & librewolf & nextcloud & /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1 & dbus-update-activation-environment DISPLAY XAUTHORITY WAYLAND_DISPLAY & xrdb "$XDG_CONFIG_HOME/X11/xresources" & spotifyd --no-daemon & syncthing
 
 
 
@@ -49,8 +49,8 @@ general {
     gaps_in = 5
     gaps_out = 20
     border_size = 2
-    col.active_border = rgba(b9bbbdee)
-    col.inactive_border = rgba(000000aa)
+    col.active_border = rgb(27a1b9)
+    col.inactive_border = rgba(15161eaa)
 
     layout = master
 }
@@ -223,4 +223,4 @@ bindel = , XF86AudioLowerVolume, exec, pulsemixer --change-volume -2  # decrease
 bindel = , XF86AudioMute, exec, pulsemixer --toggle-mute  # mute volume
 bindel = , XF86AudioPlay, exec, playerctl -a play-pause  # pause/play everything
 
-
+bindl = , switch:Lid Switch, exec, lock
