--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -155,14 +155,16 @@ font:
     # Thin strokes are suitable for retina displays, but for non-retina screens
     # it is recommended to set `use_thin_strokes` to `false`.
     # use_thin_strokes: false
-# If `true`, bold text is drawn using the bright color variants.
+    # If `true`, bold text is drawn using the bright color variants.
 draw_bold_text_with_bright_colors: true
 # Colors (Tomorrow Night)
 colors:
   # Default colors
   primary:
-    background: "#282a36"
-    foreground: "#f8f8f2"
+    # background: "#282a36"
+    # foreground: "#f8f8f2"
+    background: "#1a1b26"
+    foreground: "#c0caf5"
     # Bright and dim foreground colors
     #
     # The dimmed foreground color is calculated automatically if it is not
@@ -241,24 +243,41 @@ colors:
     background: CellForeground
   # Normal colors
   normal:
-    black: "#21222c"
-    red: "#ff5555"
-    green: "#50fa7b"
-    yellow: "#f1fa8c"
-    blue: "#bd93f9"
-    magenta: "#ff79c6"
-    cyan: "#8be9fd"
-    white: "#f8f8f2"
+    # black: "#21222c"
+    # red: "#ff5555"
+    # green: "#50fa7b"
+    # yellow: "#f1fa8c"
+    # blue: "#bd93f9"
+    # magenta: "#ff79c6"
+    # cyan: "#8be9fd"
+    # white: "#f8f8f2"
+    black: "0x15161e"
+    red: "0xf7768e"
+    green: "0x9ece6a"
+    yellow: "0xe0af68"
+    blue: "0x7aa2f7"
+    magenta: "0xbb9af7"
+    cyan: "0x7dcfff"
+    white: "0xa9b1d6"
+  #
   # Bright colors
   bright:
-    black: "#6272a4"
-    red: "#ff6e6e"
-    green: "#69ff94"
-    yellow: "#ffffa5"
-    blue: "#d6acff"
-    magenta: "#ff92df"
-    cyan: "#a4ffff"
-    white: "#ffffff"
+    # black: "#6272a4"
+    # red: "#ff6e6e"
+    # green: "#69ff94"
+    # yellow: "#ffffa5"
+    # blue: "#d6acff"
+    # magenta: "#ff92df"
+    # cyan: "#a4ffff"
+    # white: "#ffffff"
+    black: "0x414868"
+    red: "0xf7768e"
+    green: "0x9ece6a"
+    yellow: "0xe0af68"
+    blue: "0x7aa2f7"
+    magenta: "0xbb9af7"
+    cyan: "0x7dcfff"
+    white: "0xc0caf5"
   # Dim colors
   #
   # If the dim colors are not set, they will be calculated automatically based
@@ -281,8 +300,9 @@ colors:
   # Example:
   #   `- { index: 16, color: '#ff00ff' }`
   #
-  #indexed_colors: []
-
+  indexed_colors:
+    - {index: 16, color: "0xff9e64"}
+    - {index: 17, color: "0xdb4b4b"}
   # Transparent cell backgrounds
   #
   # Whether or not `window.opacity` applies to all cell backgrounds or only to
@@ -353,12 +373,12 @@ cursor:
     #   - On: Enable blinking by default
     #   - Always: Force the cursor to always blink
     #blinking: Off
-  # Vi mode cursor style
-  #
-  # If the vi mode cursor style is `None` or not specified, it will fall back to
-  # the style of the active value of the normal cursor.
-  #
-  # See `cursor.style` for available options.
+    # Vi mode cursor style
+    #
+    # If the vi mode cursor style is `None` or not specified, it will fall back to
+    # the style of the active value of the normal cursor.
+    #
+    # See `cursor.style` for available options.
   vi_mode_style: Block
   # Cursor blinking interval in milliseconds.
   #blink_interval: 750
@@ -369,19 +389,18 @@ cursor:
   # Thickness of the cursor relative to the cell width as floating point number
   # from `0.0` to `1.0`.
   #thickness: 0.15
-# Live config reload (changes require restart)
-#live_config_reload: true
-
-# Shell
-#
-# You can set `shell.program` to the path of your favorite shell, e.g.
-# `/bin/fish`. Entries in `shell.args` are passed unmodified as arguments to the
-# shell.
-#
-# Default:
-#   - (macOS) /bin/bash --login
-#   - (Linux/BSD) user login shell
-#   - (Windows) powershell
+  # Live config reload (changes require restart)
+  #live_config_reload: true
+  # Shell
+  #
+  # You can set `shell.program` to the path of your favorite shell, e.g.
+  # `/bin/fish`. Entries in `shell.args` are passed unmodified as arguments to the
+  # shell.
+  #
+  # Default:
+  #   - (macOS) /bin/bash --login
+  #   - (Linux/BSD) user login shell
+  #   - (Windows) powershell
 shell:
   program: /bin/zsh
 #  args:
@@ -804,9 +823,9 @@ key_bindings:
   #- { key: F,              mods: Command|Control,            action: ToggleFullscreen      }
   #- { key: F,              mods: Command, mode: ~Search,     action: SearchForward         }
   #- { key: B,              mods: Command, mode: ~Search,     action: SearchBackward        }
-#debug:
-# Display the time it takes to redraw each frame.
-#render_timer: false
+  #debug:
+  # Display the time it takes to redraw each frame.
+  #render_timer: false
 
 # Keep the log file after quitting Alacritty.
 #persistent_logging: false
