--- a/.config/flameshot/flameshot.ini
+++ b/.config/flameshot/flameshot.ini
@@ -1,8 +1,9 @@
 [General]
 contrastOpacity=188
+drawColor=#ff0000
 filenamePattern=%Y-%m-%d_%H-%M-%S
 saveAfterCopy=true
-savePath=~/Pictures/screenshots
+savePath=/home/kristofers/Downloads
 showMagnifier=true
 squareMagnifier=true
-uiColor=#ff0000
+uiColor=#ffffff
