--- a/.config/starship/starship.toml
+++ b/.config/starship/starship.toml
@@ -1,6 +1,6 @@
 # Disable the blank line at the start of the prompt
 add_newline = false
-
+command_timeout = 1000
 
 # Replace the "❯" symbol in the prompt with "➜"
 [character] # The name of the module we are configuring is "character"
