Update yazi packages

--- a/config/flameshot.ini
+++ b/config/flameshot.ini
@@ -1,6 +1,6 @@
 [General]
 contrastOpacity=188
-drawColor=#ffffff
+drawColor=#ff0000
 drawThickness=3
 filenamePattern=%Y-%m-%d_%H-%M-%S
 saveAfterCopy=true
