--- a/config/yazi/yazi.toml
+++ b/config/yazi/yazi.toml
@@ -92,12 +92,12 @@ previewers = [
   # JSON
   {mime = "application/json", run = "code"},
   # Image
-  # {mime = "image/vnd.djvu", run = "noop"},
-  # {mime = "image/*", run = "image"},
+  {mime = "image/vnd.djvu", run = "noop"},
+  {mime = "image/*", run = "image"},
   # Video
-  # {mime = "video/*", run = "video"},
+  {mime = "video/*", run = "video"},
   # PDF
-  # {mime = "application/pdf", run = "pdf"},
+  {mime = "application/pdf", run = "pdf"},
   # Fallback
   {name = "*", run = "file"},
 ]
