--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -15,11 +15,8 @@
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-# monitor=,preferred,auto,auto
-monitor=,prefered,auto,1.5
-monitor=DP-1,disable
-#monitor=HDMI-A-1,highres,auto-up,1,mirror,eDP-1
-
+monitor=eDP-1,prefered,auto,1.5
+monitor=DP-1,prefered,auto,1
 
 ###################
 ### MY PROGRAMS ###
@@ -31,6 +28,7 @@ monitor=DP-1,disable
 $terminal = alacritty
 $fileManager = $terminal -e yazi
 $menu = wofi --show drun -ib
+$browser = zen-browser
 
 
 #################
@@ -41,10 +39,10 @@ $menu = wofi --show drun -ib
 # Or execute your favorite apps at launch like this:
 
 exec-once=pipewire & pipewire-pulse & wireplumber & eww daemon & eww open bar & dbus-update-activation-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP DISPLAY XAUTHORITY
-exec-once=nextcloud & /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1 & xrdb "$XDG_CONFIG_HOME/x11/xresources" & syncthing & transmission-daemon & dunst & hyprpaper
-exec-once=[workspace 1 silent] floorp
-exec-once=[workspace 8 silent] discord & kotatogram-desktop
-exec-once=[workspace 9 silent] spotify
+exec-once=nextcloud & /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1 & xrdb "$XDG_CONFIG_HOME/x11/xresources" & transmission-daemon & dunst & hyprpaper
+exec-once=[workspace 1 silent] $browser
+exec-once=[workspace 8 silent] vesktop & kotatogram-desktop
+exec-once=[workspace 9 silent] spotify-launcher
 
 # Source a file (multi-file configs)
 source=~/.config/hypr/rose-pine.conf
@@ -68,7 +66,7 @@ env = HYPRCURSOR_SIZE,24
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general {
     gaps_in = 5
-    gaps_out = 20
+    gaps_out = 10
 
     border_size = 2
 
@@ -88,6 +86,7 @@ general {
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
     rounding = 5
+    # rounding_power = 2
 
     # Change transparency of focused and unfocused windows
     active_opacity = 1.0
@@ -222,6 +221,7 @@ bind = $mainMod, P, exec, $menu
 bind = $mainMod, F, fullscreen
 bind = $mainMod, M, bringactivetotop
 bind = $mainMod, A, pin
+bind = $mainMod, B, exec, $browser
 #bind = $mainMod, O, split-changemonitor, +1
 # bind = $mainMod, P, pseudo, # dwindle
 # bind = $mainMod, J, togglesplit, # dwindle
@@ -329,6 +329,11 @@ bind = $mainMod ALT, P, exec, hyprpicker -a  # colorpicker
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 
 # Ignore maximize requests from apps. You'll probably like this.
+# windowrulev2 = suppressevent maximize, class:.*
+
+# Fix some dragging issues with XWayland
+# windowrulev2 = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+
 windowrulev2 = suppressevent maximize, class:.*
 
 # Fix some dragging issues with XWayland
@@ -340,11 +345,13 @@ windowrulev2 = opacity 0.95, class:thunderbird
 
 windowrulev2 = workspace 8, class:discord
 windowrulev2 = opacity 0.95, class:discord
+windowrulev2 = workspace 8, class:vesktop
+windowrulev2 = opacity 0.95, class:vesktop
 windowrulev2 = workspace 8, class:Ripcord
 windowrulev2 = workspace 8, class:TelegramDesktop
 windowrulev2 = opacity 0.95, class:TelegramDesktop
-windowrulev2 = workspace 8, class:kotatogramdesktop
-windowrulev2 = opacity 0.95, class:kotatogramdesktop
+windowrulev2 = workspace 8, title:Kotatogram
+windowrulev2 = opacity 0.95, title:Kotatogram
 windowrulev2 = opacity 0.9, class:teams-for-linux
 windowrulev2 = workspace 5, class:Ferdium
 windowrulev2 = opacity 0.9, class:Ferdium
@@ -367,3 +374,4 @@ windowrulev2 = float, class:galculator
 windowrulev2=float,title:^(flameshot)
 windowrulev2=move 0 0,title:^(flameshot)
 windowrulev2=suppressevent fullscreen,title:^(flameshot)
+
